--- a/style.css
+++ b/style.css
@@ -451,5 +451,28 @@ section {
   vertical-align: middle;
 }
 
+.affiche-text-style {
+  display: none;
+  position: absolute;
+  top: 5%;
+  left: 20px;         /* même que margin-left des images */
+  width: 220px;       /* même que max-width des images */
+  color: #111;
+  font-size: 0.55rem;
+  font-family: 'Press Start 2P', monospace;
+  text-align: left;   /* alignement à gauche */
+  overflow-wrap: break-word;
+  pointer-events: none;
+  z-index: 2;
+  line-height: 1.8;
+  letter-spacing: 0.05em;
+  word-spacing: 0.3em;
+  white-space: normal;
+}
+
+
+
+
+
 
 
