--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   background-attachment: scroll;
 }
 
-#hero, #about {
+#hero, #skills {
   min-height: 100vh;
   padding: 0; /* ⬅️ Supprime l’espace interne */
   background-color: rgba(0, 0, 0, 0.4);
@@ -34,14 +34,14 @@ body {
   color: white;
 }
 /* Supprime les backgrounds individuels */
-#hero, #about {
+#hero, #skills {
   background-image: none;
 }
 
 
 
 
-#hero, #about {
+#hero, #skills {
   background: transparent;
 }
 
@@ -454,7 +454,7 @@ section {
   max-width: 200px;
   margin-top: 20px;
   margin-left: 20px;  
-  border: 2px solid #000;
+  border: 2px solid #217d86;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
   height: auto;
@@ -486,5 +486,76 @@ section {
 
 
 
+.bateau-style{
+  display: inline-block;
+  max-width: 70px;
+  margin-top: -5px;
+  margin-left: 20px;  
+  height: auto;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  vertical-align: middle;
+}
 
 
+        #projects {
+            padding: 50px 20px;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #projects h2 {
+            font-size: 2.5em;
+            margin-bottom: 30px;
+            color: #444;
+        }
+
+        .project-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .project-card {
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            width: 300px;
+            transition: transform 0.3s;
+        }
+
+        .project-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .project-card img {
+            width: 100%;
+            height: auto;
+            border-bottom: 3px solid #007BFF;
+        }
+
+        .project-card-content {
+            padding: 20px;
+        }
+
+        .project-card h3 {
+            margin-top: 0;
+            color: #007BFF;
+        }
+
+        .project-card p {
+            color: #666;
+        }
+
+        .project-card a {
+            display: inline-block;
+            margin-top: 10px;
+            color: #007BFF;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .project-card a:hover {
+            text-decoration: underline;
+        }
